--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,18 +13,20 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-        
+
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages:
             any::rmarkdown
-            any::knitr  
+            any::knitr
             any::googlesheets4
+            any::dplyr
+            any::bookdown
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
- 
+
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
